# nero-nfc-reader-firmware

./: .gitignore  .pre-commit-config.yaml  INSTALLATION.md  Makefile  README.md  RELEASE.md
.github/: lint-c-cpp.yaml  release-notes.md
cmake/: CompilerHardeningProbes.cmake  Hardening.by-build__lint__firmware__arduino_uno_r4wifi__nfc__cdc__compile_commands_json.cmake  Hardening.by-build__lint__firmware__arduino_uno_r4wifi__reader__ccid__compile_commands_json.cmake  Hardening.by-build__lint__firmware__arduino_uno_r4wifi__reader__cdc__compile_commands_json.cmake  Hardening.by-build__lint__firmware__arduino_uno_r4wifi__writer__cdc__compile_commands_json.cmake  Hardening.by-build__lint__firmware__nucleo_wba65ri__nfc__cdc__compile_commands_json.cmake  Hardening.by-build__lint__firmware__nucleo_wba65ri__reader__ccid__compile_commands_json.cmake  Hardening.by-build__lint__firmware__nucleo_wba65ri__reader__cdc__compile_commands_json.cmake  Hardening.by-build__lint__firmware__nucleo_wba65ri__writer__cdc__compile_commands_json.cmake  Hardening.cmake  Hardening.flags.by-build__lint__firmware__arduino_uno_r4wifi__nfc__cdc__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__arduino_uno_r4wifi__reader__ccid__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__arduino_uno_r4wifi__reader__cdc__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__arduino_uno_r4wifi__writer__cdc__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__nucleo_wba65ri__nfc__cdc__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__nucleo_wba65ri__reader__ccid__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__nucleo_wba65ri__reader__cdc__compile_commands_json.mk  Hardening.flags.by-build__lint__firmware__nucleo_wba65ri__writer__cdc__compile_commands_json.mk  HostHardening.cmake  NeroCompilerHardeningProbes.cmake  NeroSilentProbe.cmake  NeroThirdParty.cmake  VerifyCompiler.cmake
docs/: CCID.md  TUTORIAL_TAGS.md  TUTORIAL_WEBAUTHN_CCID.md  spec-traceability.yaml
make/: arduino-cli-1.5.1-Linux_32bit.sha256  arduino-cli-1.5.1-Linux_64bit.sha256  arduino-cli-1.5.1-Linux_ARM64.sha256  arduino-cli-1.5.1-Linux_ARMv6.sha256  arduino-cli-1.5.1-Linux_ARMv7.sha256  arduino-third-party-isystem.sh  board-arduino_uno_r4wifi.mk  board-nucleo_wba65ri.mk  cli-spinner.sh  cpu-jobs.sh  ensure-arduino-cli.sh  ensure-arduino-core.sh  ensure-stamp.sh  ensure-tinyusb-wba65.sh  ensure-wba65-openocd.sh  ensure-wba65-stm32-core.sh  export-arduino-isolated-env.sh  fetch-archive.sh  fetch-arduino-cli.sh  fetch-tarball.sh  install-linux-deps.sh  lib-firmware-root.sh  nfc-frontends.mk  nfc-rfal-2.0.2.sha256  openssf-hardening.mk  resolve-arduino-cli.sh  resolve-arduino-user-dir.sh  run-unit-tests.sh  scan-build-tests.sh  st25r-nfc-frontends.mk  st25r3916-2.0.2.sha256  target-arduino_cli.mk  target-arduino_uno_r4wifi.mk  third-party-host-tools.mk  third-party-nfc-libs.mk  third-party-st-libs.mk  third-party-tinyusb-wba65.mk  third-party-wba65-openocd.mk  vendor-tinyusb-wba65.mk  verify-host-binary-hardening.sh  (+1 more)
packaging/: 70-nero-nfc-arduino.rules  71-nero-nfc-stlink.rules
tests/: CMakeLists.txt  test_build_enforcement.py
tests/firmware/: CMakeLists.txt  test_ccid_usb_rx_assembly.cpp  test_nero_nfc_copy_bytes.cpp  test_nero_nfc_limits.cpp  test_nero_nfc_platform_app.cpp  test_nfc_ccid_frame.cpp  test_nfc_ctap_codec.cpp  test_nfc_frontend.cpp  test_nfc_mode_line_scan.cpp  test_nfc_ndef_record_decode.cpp  test_nfc_ndef_tlv.cpp  test_nfc_pcsc_contactless.cpp  test_nfc_print_utils.cpp  test_nfc_print_utils_compile.c  test_nfc_print_utils_compile.h  test_nfc_storage_ndef.cpp  test_nfc_tag_info.cpp  test_reader_cbor.cpp  test_reader_ccid_dispatch.cpp  test_reader_context.cpp  test_reader_protocol_seams.cpp  test_reader_ram_constrained.cpp  test_reader_security_key_transceive.cpp  test_reader_tags_ndef_decode.cpp  test_reader_tags_ndef_print.cpp  test_reader_tags_type2_bounds.cpp  test_st25_iso15693_codec.cpp  test_writer_payload.cpp  test_writer_serial_cli.cpp  test_writer_type2_geometry.cpp  writer_payload_utest_hook.h
tests/firmware/support/: Arduino.h  nero_nfc_frontend_host_fake.c  nero_nfc_platform_host_fake.c  nero_nfc_platform_host_fake.h  nero_nfc_reader_app_fixture.hpp  nfc_runtime_mode_poll_stub.c  nfc_session_owner_utest_stub.c  reader_ccid_test_setup.c  reader_hal_utest_stub.c  reader_protocol_utest_stub.cpp  reader_security_key_utest_iso_dep.h  reader_security_key_utest_stub.c  reader_security_key_utest_stub.cpp  reader_security_key_utest_stub.h  reader_tags_utest.h  reader_tags_utest_stub.c  st25_iso15693_codec_host.h  st25_iso15693_codec_host.hpp  test_bounds.hpp  writer_hal_utest_stub.cpp  writer_hal_utest_stub.h  writer_hal_utest_stub.hpp
tests/userspace/: CMakeLists.txt  test_userspace_bridge.cpp  test_userspace_browser.cpp  test_userspace_detect.cpp  test_userspace_driver.cpp  test_userspace_line_pump.cpp  test_userspace_pcsc.cpp  test_userspace_pcsc_live.cpp  test_userspace_pcsc_tag_details.cpp  test_userspace_serial.cpp  test_userspace_writer_payload.cpp
userspace/: CMakeLists.txt
userspace/app/: CMakeLists.txt  nero_nfc_bounds.hpp  nero_nfc_bridge.cpp  nero_nfc_bridge.h  nero_nfc_bridge.hpp  nero_nfc_browser.cpp  nero_nfc_browser.h  nero_nfc_browser.hpp  nero_nfc_cli_exit.h  nero_nfc_cli_exit.hpp  nero_nfc_detect.cpp  nero_nfc_detect.h  nero_nfc_detect.hpp  nero_nfc_dir_raii.h  nero_nfc_dir_raii.hpp  nero_nfc_dl_raii.h  nero_nfc_dl_raii.hpp  nero_nfc_driver.cpp  nero_nfc_driver.h  nero_nfc_driver.hpp  nero_nfc_file_raii.h  nero_nfc_glob_raii.h  nero_nfc_glob_raii.hpp  nero_nfc_hex.cpp  nero_nfc_hex.h  nero_nfc_hex.hpp  nero_nfc_io.cpp  nero_nfc_io.h  nero_nfc_io.hpp  nero_nfc_line_pump.cpp  nero_nfc_line_pump.h  nero_nfc_line_pump.hpp  nero_nfc_ndef.cpp  nero_nfc_ndef.h  nero_nfc_ndef.hpp  nero_nfc_pcsc.cpp  nero_nfc_pcsc.h  nero_nfc_pcsc.hpp  nero_nfc_pcsc_connect.cpp  nero_nfc_pcsc_format.cpp  (+15 more)
userspace/cli/: CMakeLists.txt  nero_nfc_uart_main.cpp  reader_main.cpp  writer_main.cpp
userspace/scripts/: install-linux.sh
(+420 files in other folders)
